--- a/.github/workflows/trufflehog-scan.yml
+++ b/.github/workflows/trufflehog-scan.yml
@@ -22,7 +22,7 @@ jobs:
           fetch-depth: 0
 
       - name: Install TruffleHog
-        run: pip install trufflehog
+        run: apt install trufflehog
 
       - name: Get Changed Files in PR
         id: changed-files
