--- a/.github/workflows/trufflehog-scan.yml
+++ b/.github/workflows/trufflehog-scan.yml
@@ -22,7 +22,7 @@ jobs:
           fetch-depth: 0
 
       - name: Install TruffleHog
-        run: sudo apt install trufflehog
+        run: sudo curl -sSfL https://raw.githubusercontent.com/trufflesecurity/trufflehog/main/scripts/install.sh | sh -s -- -b /usr/local/bin
 
       - name: Get Changed Files in PR
         id: changed-files
